# Streamlit_demo

./: README.md  pyproject.toml
.github/workflows/: ci-test.yml
app/: english_culture.py  spell_check.py  tea_app.py
app/pages/: page_1.py
data/: top_15_tea_countries_2004_2023.csv  uk_landmarks.csv
tests/: test_spell_app.py
